<resources>
    <string name="app_name">NayaGhar</string>
    <string name="title_activity_home">homeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_Register">Register Here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="dog_prompt">Choose a Breed</string>

    <string-array name="breed_arrays">
        <item>Akita</item>
        <item>American Foxhound</item>
        <item>Beagle</item>
        <item>Bloodhound</item>
        <item>Boston Terrier</item>
        <item>Boxer</item>
        <item>Bulldog</item>
        <item>Bullmastiff</item>
        <item>Chihuahua</item>
        <item>Chow Chow</item>
        <item>Cocker Spaniel</item>
        <item>Dalmatian</item>
        <item>Dachshund</item>
        <item>Doberman</item>
        <item>English Foxhound</item>
        <item>German Shepherd </item>
        <item>Golden Retriever</item>
        <item>Great Dane</item>
        <item>Lhasa Apso</item>
        <item>Neapolitan Mastiff</item>
        <item>Pomeranian</item>
        <item>Pug</item>
        <item>Tibetan Mastiff</item>
        <item>Toy Poodle</item>


    </string-array>

    <string name="title_activity_log_detail">Register</string>
    <string name="name">Name</string>
    <string name="new_user_register_here">New User? Register Here!</string>
    <string name="title_activity_home1">Home1</string>


</resources>
