<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ashwin.nayaghar.Login"
    android:background="@color/colorPrimaryDark">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView4">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:drawableRight="@drawable/em"
                    android:textColorHint="@color/abc_secondary_text_material_light"
                    android:textColor="@android:color/background_light"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:drawableRight="@drawable/lock"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="328dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:background="@color/material_grey_300"
                android:textSize="20dp" />

            <Button
                style="?android:textAppearanceSmall"
                android:id="@+id/register"
                android:layout_width="328dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="0dp"
                android:text="@string/new_user_register_here"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick3"
                android:layout_weight="0.81"
                android:background="#e0e0e0"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login"
        />

</RelativeLayout>
